--- a/src/components/SubNavigation/SubNavigation.scss
+++ b/src/components/SubNavigation/SubNavigation.scss
@@ -68,7 +68,12 @@
             }
 
             &_open {
-                max-height: 100vh;
+                max-height: calc(
+                    100vh - var(--dc-header-height, $headerHeight) - var(
+                            --dc-subnavigation-height,
+                            $subNavigationHeight
+                        ) - #{$mobileMiniTocOffset}
+                );
                 transition: max-height 300ms 0s;
             }
         }
